--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -2,6 +2,11 @@
     --primary-color: #02153f;
     --secondary-color: #01aced;
 }
+
+* {
+    box-sizing: border-box;
+}
+
 /* 
 #032030
 #022b42
@@ -198,17 +203,17 @@ nav a.active {
 
 }
 
-.expereince-section{
-   
- 
+.expereince-section {
+
+
     width: 1472px;
 
-    
+
 }
 
 .grid-container {
-   
-   
+
+
     background-color: #cccfe0;
     width: 100%;
     display: grid;
@@ -221,21 +226,21 @@ nav a.active {
 .first-element {
 
     /* border: 1px solid black; */
-    border-top:  2px solid #cccfe0;;
+    border-top: 2px solid #cccfe0;
+    ;
 
     padding-top: 20px;
-    color:#003554;
+    color: #003554;
     text-align: center;
     font-size: 25px;
     line-height: 27px;
 }
+
 .second-element {
     width: 100%;
     /* border: 1px solid black; */
-   
-    color:white
-    
 
+    color: white
 }
 
 
@@ -244,59 +249,62 @@ nav a.active {
     position: relative;
     max-width: 1200px;
     margin: 0 auto;
-  }
-  
-  /* The actual timeline (the vertical ruler) */
-  .timeline::after {
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline::after {
     content: '';
     position: absolute;
     width: 6px;
-    background-color: var(--primary-color); 
+    background-color: var(--primary-color);
     /* background-color: #fff; */
     top: 0;
     bottom: 0;
     left: 14px;
-    
-  }
-  /* Container around content */
+
+}
+
+/* Container around content */
 .container {
     padding: 10px 40px;
     position: relative;
     background-color: #cccfe0;
-    
-  }
-  
-  /* The circles on the timeline */
-  .container::after {
+
+}
+
+/* The circles on the timeline */
+.container::after {
     content: '';
     position: absolute;
     top: 25px;
     left: 0;
     width: 25px;
     height: 25px;
-    
+
     background-color: white;
     border: 4px solid #FF9F55;
-  
+
     border-radius: 50%;
     z-index: 1;
-  }
-  .content{
+}
+
+.content {
     margin-top: 10px;
     margin-bottom: 5px;
     margin-left: 10px;
- padding-left: 10px;
+    padding-left: 10px;
     background-color: white;
     border-radius: 7px;
     color: #003554;
-    
-  }
 
-.content ul{
+}
+
+.content ul {
     padding: 20px;
     list-style: disc;
 }
-.content ul li{
+
+.content ul li {
     line-height: 20px;
     font-size: 16px;
 }
@@ -382,8 +390,7 @@ nav a.active {
         align-items: start;
     }
 
-    .expereince-section
-    {
+    .expereince-section {
         width: 768px;
     }
 
@@ -443,5 +450,145 @@ nav a.active {
         position: relative;
 
         width: 100%;
+    }
+}
+
+.section-exp {
+    /* background-color: #474e5d; */
+    background-color: #cccfe0;
+    font-family: Helvetica, sans-serif;
+    border-radius: 10px;
+    padding:15px 0;
+}
+
+.timeline-section {
+    position: relative;
+    max-width: 1472px;
+    margin: 0 auto;
+    padding: 15px 0;
+}
+
+/* The actual timelin-secftiom (the vertical ruler) */
+.timeline-section::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    background-color: var(--primary-color);
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+}
+
+/* card-container around content */
+.card-container {
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 50%;
+}
+
+/* The circles on the timelin-secftiom */
+.card-container::after {
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    right: -17px;
+    background-color: white;
+    border: 4px solid #FF9F55;
+    top: 15px;
+    border-radius: 50%;
+    z-index: 1;
+}
+
+/* Place the card-container to the left */
+.left {
+    left: 0;
+}
+
+/* Place the card-container to the right */
+.right {
+    left: 50%;
+}
+
+/* Add arrows to the left card-container (pointing right) */
+.left::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    right: 30px;
+    border: medium solid white;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent white;
+}
+
+/* Add arrows to the right card-container (pointing left) */
+.right::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    left: 30px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+}
+
+/* Fix the circle for card-containers on the right side */
+.right::after {
+    left: -16px;
+}
+
+/* The actual content */
+.card {
+    padding: 20px 30px;
+    background-color: white;
+    position: relative;
+    border-radius: 6px;
+    
+}
+.card div{
+
+    text-align: left;
+}
+
+/* Media queries - Responsive timelin-secftiom on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+
+    /* Place the timelime to the left */
+    .timelin-secftiom::after {
+        left: 31px;
+    }
+
+    /* Full-width card-containers */
+    .card-container {
+        width: 100%;
+        padding-left: 70px;
+        padding-right: 25px;
+    }
+
+    /* Make sure that all arrows are pointing leftwards */
+    .card-container::before {
+        left: 60px;
+        border: medium solid white;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent white transparent transparent;
+    }
+
+    /* Make sure all circles are at the same spot */
+    .left::after,
+    .right::after {
+        left: 15px;
+    }
+
+    /* Make all right card-containers behave like the left ones */
+    .right {
+        left: 0%;
     }
 }
